Closed
Bug 343511
Opened 19 years ago
Closed 19 years ago
JSD asserts when opening mail, jsdthreadstate->stackDepth > 0
Categories
(Other Applications Graveyard :: Venkman JS Debugger, defect)
Other Applications Graveyard
Venkman JS Debugger
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ajschult784, Assigned: bugzilla-mozilla-20000923)
References
Details
(Keywords: assertion, fixed1.8.1)
Attachments
(2 files)
8.37 KB,
text/plain
|
Details | |
778 bytes,
patch
|
rginda
:
review+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
With current trunk seamonky, if I have venkman open (and don't exclude browser files) and open mail, JSD dies with
Assertion failure: jsdthreadstate->stackDepth > 0, at /build/andrew/moz-debug/mozilla/js/jsd/jsd_stak.c:48
Reporter | ||
Comment 1•19 years ago
|
||
Crashed on WinXP, similar stack, though I was opening Navigator from Venkman.
OS: Linux → All
Assignee | ||
Comment 3•19 years ago
|
||
I can't get current trunk SeaMonkey to reproduce this, which makes it impossible to actually debug. More reliable steps are needed.
Reporter | ||
Comment 4•19 years ago
|
||
Enabling "stop for exceptions" also seems necessary to hit the assertion. With that, I see this with a clean profile.
Assignee | ||
Comment 5•19 years ago
|
||
Yeah, I'd figured out that other setting change. Currently, though, my clean SM install is crashing and burning in XUL land when I try to open mail (something is clobbering the variables of a nsXULPrototypeAttribute instance, so it then tries to allocate 4GB of heap space on destruction).
Reporter | ||
Comment 6•19 years ago
|
||
that's bug 341595. delete your fastload file and all will be well (temporarily)
Assignee | ||
Comment 7•19 years ago
|
||
The destruction code has no reason to require a stack depth > 0, it copes fine with no stack in the thread state.
The reason it was getting into this position is strange, and involves our wonderful old friend XBL. With this patch, it does still stop for the "this.docShell has no properties" error, but it has unwound a single stack frame. This is probably related to it being unable to locate the JSD script object for the top stack frame, which originally caused the assertion.
Attachment #228603 -
Flags: review?(rginda)
Assignee | ||
Comment 8•19 years ago
|
||
The JS stack at the point of failure was:
# Location (current line)
00 chrome://global/content/bindings/browser.xml(0) (internal) (fun: interpreted)
01 chrome://global/content/bindings/browser.xml(420) (fun: interpreted)
02 chrome://global/content/bindings/browser.xml(403) (internal) (fun: interpreted)
03 NATIVE
04 chrome://global/content/charsetOverlay.js(293)
I'm highly suspicious of the top frame, which *should* be pointing at:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xpfe/global/resources/content/bindings/browser.xml&rev=1.47&mark=230#228
One thing that confused me was that the function object for the top frame (cx->fp->fun) did not have the JSFUN_GETTER flag set, which I expected it to.
Comment 9•19 years ago
|
||
Comment on attachment 228603 [details] [diff] [review]
Only assert what is needed
r=rginda
Attachment #228603 -
Flags: review?(rginda) → review+
Assignee | ||
Updated•19 years ago
|
Assignee: rginda → silver
Hardware: PC → All
Assignee | ||
Comment 10•19 years ago
|
||
Checked in --> FIXED.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 11•19 years ago
|
||
*** Bug 255727 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 12•19 years ago
|
||
*** Bug 349167 has been marked as a duplicate of this bug. ***
Assignee | ||
Updated•19 years ago
|
Attachment #228603 -
Flags: approval1.8.1?
Updated•19 years ago
|
Whiteboard: [181approval pending]
Comment 13•19 years ago
|
||
Comment on attachment 228603 [details] [diff] [review]
Only assert what is needed
a=schrep for drivers - approving all [181approval pending] bugs now that the tree is open.
Attachment #228603 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Comment 14•19 years ago
|
||
Checked in on MOZILLA_1_8_BRANCH.
Keywords: fixed1.8.1
Whiteboard: [181approval pending]
Updated•7 years ago
|
Product: Other Applications → Other Applications Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•