Bug 343511 - Don't assert more than necessary. r=rginda