js/jsd/jsd_stak.c
@@ -172,7 +172,7 @@ jsd_DestroyThreadState(JSDContext* jsdc, JSDThreadState* jsdthreadstate)
     JSDStackFrameInfo* jsdframe;
     JSCList* list;
 
-    JSD_ASSERT_VALID_THREAD_STATE(jsdthreadstate);
+    JS_ASSERT(jsdthreadstate);
     JS_ASSERT(JSD_CURRENT_THREAD() == jsdthreadstate->thread);
 
     JSD_LOCK_THREADSTATES(jsdc);
